Closed Bug 1865597 Opened 1 year ago Closed 1 year ago

Return code for GCRuntime::updateMarkersVector is not checked

Categories

(Core :: JavaScript: GC, defect)

defect

Tracking

()

RESOLVED FIXED
122 Branch
Tracking Status
firefox122 --- fixed

People

(Reporter: jonco, Assigned: jonco)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

This method is fallible but its return code is not checked. This only affects parallel marking, which is not enabled by default.

In practice this is never going to fail because we will always have enough
helper threads. It may be important later if other parallel marking
initialization is added.

Assignee: nobody → jcoppeard
Status: NEW → ASSIGNED
Pushed by jcoppeard@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/63cc6bba665e Add error checking when initializing parallel marking and disable on error r=sfink
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 122 Branch
Regressions: 1868629
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: