Bug 1865597 - Add error checking when initializing parallel marking and disable on error r=sfink

In practice this is never going to fail because we will always have enough
helper threads. It may be important later if other parallel marking
initialization is added.

Differential Revision: https://phabricator.services.mozilla.com/D194095