js/src/jit-test/tests/gc/bug-1865597.js
@@ -1,0 +1,10 @@
+// |jit-test| skip-if: !('oomTest' in this)
+
+oomTest(() => {
+  gcparam('parallelMarkingEnabled', false);
+  assertEq(gcparam('parallelMarkingEnabled'), 0);
+  gcparam('parallelMarkingEnabled', true);
+  assertEq(gcparam('parallelMarkingEnabled'), 1);
+  gcparam('parallelMarkingEnabled', false);
+  assertEq(gcparam('parallelMarkingEnabled'), 0);
+});
